tests/cases/error/error_recursive_include.rapt
# line 1
INCLUDE error_recursive_include
# line 3
