tests/cases/error/error_recursive_include.out
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rapt:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Error while evaluating INCLUDE
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (included here)
2 |
  |
error: Script Error
 --> tests/cases/error/error_recursive_include.rinc:1:1
  |
1 | INCLUDE error_recursive_include
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Script error: Too many nested includes
2 |
  |
